Started POST, GET from API

--- a/index.html
+++ b/index.html
@@ -25,21 +25,23 @@
             <p class="val">A night of celebration and networking</p>
             <button class="deleteButt">DELETE</button>
         </div>
-
-        <form action="" class="form">
-            <h2>Schedule an Event</h2>
-            <label for="name">Enter Event Name:</label>
-            <input type="text" name="name" id="name"></input>
-            <label for="date">Event Date:</label>
-            <input type="date" name="date" id="date"></input>
-            <label for="time">Event Time:</label>
-            <input type="time" name="time" id="time"></input>
-            <label for="location">Event Location:</label>
-            <input type="text" name="location" id="location"></input>
-            <label for="description">Event Descriptions:</label>
-            <input type="text" name="description" id="description"></input>
-            <button type="submit">Submit</button>
-        </form> 
+       
     </div>
+
+    <form action="" class="form">
+        <h2>Schedule an Event</h2>
+        <label for="name">Enter Event Name:</label>
+        <input type="text" name="name" id="name"></input>
+        <label for="date">Event Date:</label>
+        <input type="date" name="date" id="date"></input>
+        <label for="time">Event Time:</label>
+        <input type="time" name="time" id="time"></input>
+        <label for="location">Event Location:</label>
+        <input type="text" name="location" id="location"></input>
+        <label for="description">Event Descriptions:</label>
+        <input type="text" name="description" id="description"></input>
+        <button type="submit" id="submit">Submit</button>
+    </form> 
+
 </body>
 </html>
